--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "datasets>=4.0.0",
     "sentencepiece>=0.2.0",
 ]
