--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "datasets>=4.0.0",
+    "lingua-language-detector>=2.1.1",
+    "nltk>=3.9.1",
     "sentencepiece>=0.2.0",
 ]
