--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "datasets>=4.0.0",
     "lingua-language-detector>=2.1.1",
     "nltk>=3.9.1",
+    "python-decouple>=3.8",
     "sentencepiece>=0.2.0",
 ]
